<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/friendly_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:hint="Friendly Name"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/edt_purchase_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:focusable="false"
            android:hint="Purchase date"/>

        <EditText
            android:id="@+id/edt_serial_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:hint="Serial number"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/edt_ctn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:hint="Ctn"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:text="Email Configuration"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"/>

            <ToggleButton
                android:id="@+id/toggbutton"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/fab_margin"
                android:background="@drawable/bgtoggle"
                android:button="@null"
                android:textOff=""
                android:textOn=""
                />
        </LinearLayout>

        <Button
            android:id="@+id/pr_activity_a"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="App set up flow as activity"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/pr_activity_b"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="User initiation flow as activity"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/pr_fragment_a"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="App set up flow as fragment"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/pr_fragment_b"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="User initiation flow as fragment"
            android:textAllCaps="false"/>

    </LinearLayout>
</ScrollView>