<resources>
    <string name="app_name">Product Registration</string>
    <string name="action_settings">Settings</string>
    <string name="enter_ctn_number">Enter CTN number</string>
    <string name="user_registration">User Registration</string>
    <string name="product_registration">Product Registration</string>
    <string name="my_id">My ID:</string>
    <string name="device_name">Device name</string>
    <string name="diCom_integration">DiCom Integration</string>
    <string name="pairing_successful">Pairing successful</string>
    <string name="pairing_failed">Pairing failed</string>
    <string name="date_formate">yyyy-MM-dd</string>
    <string name="zero">0</string>
    <string name="light_state">Light state</string>
    <string name="set">Set</string>
    <string name="pair">Pair</string>
    <string name="product_registered_successfully">Product registered successfully</string>
    <string name="user_not_signed">user not signed</string>
    <string name="integratingApplicationAppsId">integratingApplicationAppsId</string>
    <string name="demo_app_home">demoapp:home</string>
    <string name="past_purchase_date_error">error in date selection</string>
    <string name="register_list">Product List</string>
    <string name="spinner_title">SPinner</string>
    <string name="prod_reg_benefits_conf_text">- Extend your warranty for 24 months.\n- Receive 10% discount in the Philips.\n- Receive free product accessories.</string>
    <string name="prod_reg_success_conf_text">An email with extended warranty contact has been sent to your email address</string>
    <string name="launch_pr_demo_app">Launch PR Demo App</string>
</resources>
