...
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="Register"
        android:textAllCaps="false"
        android:visibility="gone"/>

</LinearLayout>
